--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "simple_json_database ====================",
   "main": "server.js",
   "scripts": {
-    "test": "node_modules/grunt-cli/bin/grunt",
+    "test": "node_modules/grunt-cli/bin/grunt test",
     "start": "node server.js"
   },
   "repository": {
