--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "url": "https://github.com/makakoa/simple_json_database/issues"
   },
   "homepage": "https://github.com/makakoa/simple_json_database",
+  "dependencies": {
+    "body-parser": "^1.9.2",
+    "express": "^4.10.1"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-cli": "^0.1.13",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-jscs": "^0.8.1",
+    "grunt-jscs": "^0.8.1"
   }
 }
